# imap_quicklook

./: .gitignore  .pre-commit-config.yaml  README.md  download_data.py  generate_quicklook_glows.py  generate_quicklook_hi.py  generate_quicklook_hit.py  generate_quicklook_idex.py  generate_quicklook_lo.py  generate_quicklook_mag.py  generate_quicklook_swapi.py  generate_quicklook_ultra.py  pyproject.toml
plotting/: base_quicklook.py  glows_quicklook.py  hi_quicklook.py  hit_quicklook.py  idex_quicklook.py  lo_quicklook.py  mag_quicklook.py  quicklook_generator.py  swapi_quicklook.py  ultra_quicklook.py
plotting/cdf/: cdf_utils.py
plotting/data/imap/idex/l1a/2023/12/: imap_idex_l1a_evt_20231218_v001.cdf  imap_idex_l1a_evt_20231218_v002.cdf
plotting/data/imap/idex/l1a/2025/01/: imap_idex_l1a_evt_20250108_v001.cdf
plotting/data/imap/idex/l1a/2025/10/: imap_idex_l1a_sci-1week_20251017_v001.cdf  imap_idex_l1a_sci-1week_20251017_v002.cdf  imap_idex_l1a_sci-1week_20251017_v003.cdf  imap_idex_l1a_sci-1week_20251017_v004.cdf
plotting/data/lo/l1a/: imap_lo_l1a_histogram_20260120-repoint00132_v001.cdf
plotting/data/swe/l1a/: imap_swe_l1a_cem-raw_20260309_v001.cdf
tests/: test_quicklook_generator.py
