[tool.poetry]
name = "imap-quicklook"
version = "0.1.0"
description = "Quicklook generation code for IMAP mission and instruments."
authors = ["Ana Manica <ana@manica.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
