[tool.poetry]
name = "imap-quicklook"
version = "0.1.0"
description = "Quicklook generation code for IMAP mission and instruments."
authors = ["Ana Manica <ana@manica.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.numpydoc_validation]
checks = ["all", #report on all checks, except the following
    "EX01", # Ignore No examples section found
    "SA01", # Ignore See Also section not found
    "ES01", # Ignore No extended summary found
    "RT02" ] # Ignore The first line of the Returns section
exclude = ['__init__' ] # don't report on objects that match any of these regex
override_SS05 = [  # override SS05 to allow docstrings starting with these words
    '^Process ',
]

[tool.mypy]
disable_error_code = ['import-not-found', # Unable to locate module or package specified
                'import-untyped', # The import lacks type information
                'no-untyped-call', # Function calls are only made to functions that are fully typed
                'type-arg', # Requires type arguments to be specified in list[] and dict[]
                'union-attr', # Item "float" of "float | Any" has no attribute "reshape"
                'no-any-return', # Returning Any from a function
              ]
strict = true
explicit_package_bases = true
follow_imports = 'skip' #may want to remove
exclude = ["tests"]
packages = ["imap_quicklooks"]
plugins = 'numpy.typing.mypy_plugin'